@@ -230,50 +230,3 @@ activity_dump (struct activity *activity)
 
   ss_mutex_unlock (&lru_lock);
 }
-
-
-void
-activity_consistency_check_ (const char *func, int line,
-			     struct activity *activity)
-{
-#if 0
-  /* The number of objects on the active and inactive lists plus the
-     objects owned by the descendents must equal activity->frames.  */
-  assertx (activity, "%s:%d", func, line);
-
-  int active = 0;
-  struct object_desc *d;
-  for (d = activity->active; d;
-       d = (d->activity_lru.next == activity->active
-	    ? NULL : desc->activity_lru.next))
-    active ++;
-
-  int dirty = 0;
-  for (d = activity->inactive_dirty; d;
-       d = (d->activity_lru.next == activity->inactive_dirty
-	    ? NULL : desc->activity_lru.next))
-    dirty ++;
-
-  int clean = 0;
-  for (d = activity->inactive_clean; d;
-       d = (d->activity_lru.next == activity->inactive_clean
-	    ? NULL : desc->activity_lru.next))
-    clean ++;
-
-  int children = 0;
-  struct activity *child;
-
-  activity_for_each_child (activity, child,
-			   ({ children += child->frames; }));
-
-  if (active + dirty + clean + children != activity->frames)
-    {
-      debug (0, "at %s:%d: frames (%d) "
-	     "!= active (%d) + dirty (%d) + clean (%d) + children (%d)",
-	     func, line,
-	     activity->frames, active, dirty, clean, children);
-      activity_dump (activity);
-    }
-  assert (active + dirty + clean + children == activity->frames);
-#endif
-}
